<resources>
    <string name="app_name">CoreSample</string>
    <string name="coppernic">Coppernic</string>
    <string name="version">version %1$s</string>
    <string name="coppernic_email">support@coppernic.fr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_title_hdk">Hdk</string>
    <string name="nav_hdk_cone">Hdk C-One</string>
    <string name="nav_hdk_cizi">Hdk C-izi</string>
    <string name="nav_title_power">Power management</string>
    <string name="nav_power">API power</string>
    <string name="nav_powermgmt">API powermgmt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cone_gpio">Gpio</string>
    <string name="toggle_on_pin1">Pin 1 on</string>
    <string name="toggle_off_pin1">Pin 1 off</string>
    <string name="toggle_on_pin2">Pin 2 on</string>
    <string name="toggle_off_pin2">Pin 2 off</string>
    <string name="toggle_on_pin3">Pin 3 on</string>
    <string name="toggle_off_pin3">Pin 3 off</string>
    <string name="toggle_on_pin4">Pin 4 on</string>
    <string name="toggle_off_pin4">Pin 4 off</string>
    <string name="title_input">Input</string>
    <string name="input4">Input 4</string>
    <string name="toggle_on_polling">Polling on</string>
    <string name="toggle_off_polling">Polling off</string>
    <string name="barcode_title">Barcode</string>
    <string name="power_off">Power off</string>
    <string name="power_on">Power on</string>
    <string name="wake_down">Wake down</string>
    <string name="wake_up">Wake up</string>
    <string name="trig_down">Trig down</string>
    <string name="trig">Trig</string>
    <string name="usb_gpio_title">Usb Gpio</string>
    <string name="usb1_off">Usb 1 off</string>
    <string name="usb1_on">Usb 1 on</string>
    <string name="usb2_off">Usb 2 off</string>
    <string name="usb2_on">Usb 2 on</string>
    <string name="usb3_off">Usb 3 off</string>
    <string name="usb3_on">Usb 3 on</string>
    <string name="usb4_off">Usb 4 off</string>
    <string name="usb4_on">Usb 4 on</string>
    <string name="usb_perm_title">Usb permissions</string>
    <string name="vid">vid :</string>
    <string name="pid">pid :</string>
    <string name="ask">Ask</string>
    <string name="launch_activity">Launch activity</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="toggle_off_external_en">External En off</string>
    <string name="toggle_on_external_en">External En on</string>
    <string name="toggle_off_usb_en">Usb en off</string>
    <string name="toggle_on_usb_en">Usb En on</string>
    <string name="nav_hdk_cone_2">Hdk C-One 2</string>
    <string name="toggle_off_usb_id">Usb Id off</string>
    <string name="toggle_on_usb_id">Usb Id on</string>
    <string name="error">Error</string>
    <string name="error_service_not_found">Please install System Services application available on F-Droid. You can contact support@coppernic.fr.</string>
    <string name="nav_other">Other</string>
    <string name="nav_net">Net</string>
    <string name="nav_mapping">Mapping</string>
    <string name="hint_ip">IP</string>
    <string name="hint_mask">Mask</string>
    <string name="hint_gateway">Gateway</string>
    <string name="hint_dns1">Dns1</string>
    <string name="hint_dn2">Dns2</string>
    <string name="btn_go">Go</string>
    <string name="alert_wrong_device">Wrong Device Detected</string>
    <string name="alert_device_message">This feature is unavailable on C-One2</string>
    <string name="alert_field">Please use correct format</string>
    <string name="alert_wrong_Ip">Please enter valid Ip</string>
    <string name="alert_wrong_Mask">Please enter valid Mask</string>
    <string name="alert_wrong_Gateway">Please enter valid Gateway</string>
    <string name="alert_wrong_DNS1">Please enter valid DNS1</string>
    <string name="alert_wrong_DNS2">Please enter valid DNS2</string>
    <string name="error_Edt">You must complete the field</string>
    <string name="wrong_Device">Wrong device</string>
    <string name="static_ip">StaticIp is set</string>
    <string name="ethernet_cradle">Cradle</string>
    <string name="ethernet">Ethernet</string>
    <string name="network_error">No Network available</string>
    <string name="select_to_assign">Select to assign a different key event or shorcut</string>
    <string name="img_delete">Delete</string>
    <string name="label_key">Key</string>
    <string name="label_shortcut">Shortcut</string>
    <string name="label_trigger">Trigger</string>
    <string name="label_trig_barcode">Trig barcode scan using %1$s</string>
    <string name="label_trig_rfid">Trig rfid read using %1$s</string>
    <string name="mapping_display">%1$s - %2$s</string>
    <string name="test_exp_port">test_exp_port</string>
    <string name="launch_test">Launch test</string>
    <string name="result">Test result :</string>
    <string name="dial_positive">Continue</string>
    <string name="dial_negative">Cancel</string>
    <string name="test_progress">Test is in progress</string>
    <string name="auto_test">Auto Test</string>
    <string name="terminal">Terminal</string>
    <string name="btn_open">Open</string>
    <string name="btn_close">Close</string>
    <string name="send">Send</string>
    <string name="dial_opt">Options</string>

    <string-array name="baudrates">
        <item>921600</item>
        <item>460800</item>
        <item>230400</item>
        <item>115200</item>
        <item>57600</item>
        <item>38400</item>
        <item>19200</item>
        <item>9600</item>
        <item>4800</item>
        <item>2400</item>
        <item>1200</item>
        <item>600</item>
        <item>300</item>
    </string-array>
    <string-array name="port_names">
        <item>/dev/ttyHSL1</item>
        <item>/dev/ttyUSB0</item>
    </string-array>
    <string-array name="array_opt_term">
        <item>Set RTS</item>
        <item>Set CTS</item>
        <item>Clear screen</item>
        <item>Refresh devices</item>
        <item>Clear history</item>
    </string-array>
</resources>
