<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="fr.coppernic.samples.core.ui.HdkConeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cone_gpio"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ToggleButton
        android:id="@+id/togglePin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_off_pin1"
        android:textOn="@string/toggle_on_pin1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <ToggleButton
        android:id="@+id/togglePin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_off_pin2"
        android:textOn="@string/toggle_on_pin2"
        app:layout_constraintStart_toEndOf="@+id/togglePin1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <ToggleButton
        android:id="@+id/togglePin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_off_pin3"
        android:textOn="@string/toggle_on_pin3"
        app:layout_constraintStart_toEndOf="@+id/togglePin2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <ToggleButton
        android:id="@+id/togglePin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_off_pin4"
        android:textOn="@string/toggle_on_pin4"
        app:layout_constraintStart_toEndOf="@+id/togglePin3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_input"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBarcodePower"/>

    <RadioButton
        android:id="@+id/radioInput4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/input4"
        app:layout_constraintStart_toEndOf="@+id/togglePolling"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <ToggleButton
        android:id="@+id/togglePolling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_off_polling"
        android:textOn="@string/toggle_on_polling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/barcode_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/togglePin2"/>

    <ToggleButton
        android:id="@+id/toggleBarcodePower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/power_off"
        android:textOn="@string/power_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <ToggleButton
        android:id="@+id/toggleWakeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/wake_down"
        android:textOn="@string/wake_up"
        app:layout_constraintStart_toEndOf="@+id/toggleBarcodePower"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <ToggleButton
        android:id="@+id/toggleTrigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/trig_down"
        android:textOn="@string/trig"
        app:layout_constraintStart_toEndOf="@+id/toggleWakeUp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/usb_gpio_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/togglePolling"/>

    <ToggleButton
        android:id="@+id/toggleUsb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/usb1_off"
        android:textOn="@string/usb1_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <ToggleButton
        android:id="@+id/toggleUsb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/usb2_off"
        android:textOn="@string/usb2_on"
        app:layout_constraintStart_toEndOf="@+id/toggleUsb1"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <ToggleButton
        android:id="@+id/toggleUsb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/usb3_off"
        android:textOn="@string/usb3_on"
        app:layout_constraintStart_toEndOf="@+id/toggleUsb2"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <ToggleButton
        android:id="@+id/toggleUsb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/usb4_off"
        android:textOn="@string/usb4_on"
        app:layout_constraintStart_toEndOf="@+id/toggleUsb3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/usb_perm_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleUsb1"/>

    <EditText
        android:id="@+id/edtVid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/vid"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/pid"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <EditText
        android:id="@+id/edtPid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"/>

    <Button
        android:id="@+id/btnAskUsbPerm"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ask"
        app:layout_constraintBottom_toBottomOf="@+id/edtPid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtPid"
        app:layout_constraintTop_toTopOf="@+id/edtVid"/>

</androidx.constraintlayout.widget.ConstraintLayout>
