<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <!--group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
    </group-->

    <item android:title="@string/nav_title_hdk">
        <menu>
            <item
                android:id="@+id/nav_hdk_cone"
                android:title="@string/nav_hdk_cone"/>
            <item
                android:id="@+id/nav_hdk_cizi"
                android:title="@string/nav_hdk_cizi"/>
        </menu>
    </item>

    <item android:title="@string/nav_title_power">
        <menu>
            <item
                android:id="@+id/nav_power"
                android:title="@string/nav_power"/>
            <item
                android:id="@+id/nav_powermgmt"
                android:title="@string/nav_powermgmt"/>
        </menu>
    </item>

</menu>
