<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/frag_test_tv_exp_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_exp_port"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/frag_test_btn_test1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frag_test_tv_exp_port"
            android:text="@string/launch_test" />

        <Spinner
            android:id="@+id/frag_test_spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/frag_test_btn_test1"
            android:layout_toRightOf="@+id/frag_test_btn_test1" />

        <TextView
            android:id="@+id/frag_test_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/frag_test_btn_test1"
            android:layout_below="@+id/frag_test_btn_test1"
            android:text="@string/result" />

        <TextView
            android:id="@+id/frag_test_textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/frag_test_textView1"
            android:layout_below="@+id/frag_test_textView1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>